add duffusion forward and backward progress

--- a/_posts/2022-08-28-gcn.md
+++ b/_posts/2022-08-28-gcn.md
@@ -21,7 +21,10 @@ Graph structure is everywhere. It can be used for medicine/pharmacy, recommendat
 * **Edge-level (Link) predictions**: predict whether the two nodes in a graph will be connected or not
 * **Graph-level predictions**: classify or predict the attribute of the input graph
 
-![ML problems](/assets/images/blogs/220828-gcn/ml_problems.png)
+<!-- ![ML problems](/assets/images/blogs/220828-gcn/ml_problems.png) -->
+<div align=center>
+<img src="/assets/images/blogs/220828-gcn/ml_problems.png" width="60%" />
+</div>
 
 ## GNN
 
@@ -37,17 +40,29 @@ GCN layer: has additional computation step that gather neighbor features(input o
  -->
 
 
-![GNN IO](/assets/images/blogs/220828-gcn/gnn.png)
+<!-- ![GNN IO](/assets/images/blogs/220828-gcn/gnn.png) -->
+<div align=center>
+<img src="/assets/images/blogs/220828-gcn/gnn.png" width="60%" />
+</div>
 
 For each node, it first aggregates the features of its direct neighbors and then update its own feature. Repeat this step, every node will iteratively contain the feature-based and structural information about the other nodes. This local and iterative aggregation is similar to learnable CNN kernels. 
 
-![GNN step](/assets/images/blogs/220828-gcn/gnn_step.png)
+<!-- ![GNN step](/assets/images/blogs/220828-gcn/gnn_step.png) -->
+<div align=center>
+<img src="/assets/images/blogs/220828-gcn/gnn_step.png" width="60%" />
+</div>
 
 As shown in the illustration, at each MP layer, a node first aggregate/gather the features of neighbor nodes, combine it in a certain way, and then use it to update the node feature. The sharing mechanism is also called message passing.
 
-![GNN formula](/assets/images/blogs/220828-gcn/gnn_formula.png)
+<!-- ![GNN formula](/assets/images/blogs/220828-gcn/gnn_formula.png) -->
+<div align=center>
+<img src="/assets/images/blogs/220828-gcn/gnn_formula.png" width="60%" />
+</div>
 
-![Typical GNNs](/assets/images/blogs/220828-gcn/typical_gnn.png)
+<!-- ![Typical GNNs](/assets/images/blogs/220828-gcn/typical_gnn.png) -->
+<div align=center>
+<img src="/assets/images/blogs/220828-gcn/typical_gnn.png" width="60%" />
+</div>
 
  
 
@@ -60,22 +75,28 @@ As shown in the illustration, at each MP layer, a node first aggregate/gather th
 # Graph-based Layout Generation
 
 #### Graph2Plan
-Graphic design is everywhere in our daily life: the website page design, the magazine layout, and floorplan design for architectures, and so on. Therefore, automatic graph-based layout generation is helpful and important for designers to create new designs by the insight of previous ones. Graph2Plan [[3]](#ref3) is an efficient deep learning based approach to implicitly learn the constraints for floorplan generation, which automatically generate floorplan with retrieve-and-adjust paradigm and user in-the-loop designs. This strategy includes human design principles and user preferences and makes a UI system where user can modify the input to each step by editing the images.
+Graphic design is everywhere in our daily life: website page design, magazine layout, floor plan design for architecture, and so on. Therefore, automatic graph-based layout generation is helpful and important for designers to create new designs by the insight of previous ones. Graph2Plan [[3]](#ref3) is an efficient deep learning-based approach to implicitly learn the constraints for floorplan generation, which automatically generate floorplan with retrieve-and-adjust paradigm and user in-the-loop designs. This strategy includes human design principles and user preferences and makes a UI system where user can modify the input to each step by editing the images.
 
-![Graph2Plan](/assets/images/blogs/220828-gcn/graph2plan.png)
+<!-- ![Graph2Plan](/assets/images/blogs/220828-gcn/graph2plan.png) -->
+<div align=center>
+<img src="/assets/images/blogs/220828-gcn/graph2plan.png" width="60%" />
+</div>
 
 <!-- The research topic is to improve the previous graph-based floorplan generation method - Graph2Plan [[3]](#ref3), based on the Graph and Graph Neural Network (GNN) technology. -->
 
-The Graph2Plan [[3]](#ref3) baseline model automatically generate floorplan with retrieve-and-adjust paradigm and user in-the-loop designs, but it has mainly two drawbacks: (1). User constrains are very simple, important information like room size, functional adjacency is not considered; (2). It relies on retrieval, if the input boundary is not similar to the database, the retrieval and generation will fail because it relies on retrieval and no learning used in graph generation. 
+The Graph2Plan [3] baseline model automatically generate floorplan with retrieve-and-adjust paradigm and user in-the-loop designs, but it has mainly two drawbacks: (1). User constrains are very simple, important information like room size, functional adjacency is not considered; (2). It relies on retrieval, if the input boundary is not similar to the database, the retrieval and generation will fail because it relies on retrieval and no learning used in graph generation. 
 
 Please refer to [this slides](https://docs.google.com/presentation/d/1Cu1vFI78o_pcqBXDl-LLq54bA4FixyHAPpES8ROoaZA/edit?usp=sharing) for a more detailed introduction of Graph2Plan.
 <!-- Therefore, my goal is to improve the graph generation step with user specific constrains. -->
 
 #### Neural Design Network
 
-Neural Design Network (NDN) [[4]](#ref4) can generate a graphic design layout given a set of components with user-specified attributes and constraints. It first takes as input a graph with partial edges from user input, completes this graph by filling in unknown edges, and infers these unknown edges to build a graph with complete relationships among components. Next, NDN iteratively predicts bounding boxes for components in the complete graph and fine-tunes the bounding boxes to improve the alignment and visual quality. Please refer to [this slides](https://docs.google.com/presentation/d/19PiiWzMIE8OV7eqCfFcSfx_mYo6PAQST-qNrfOhUb6k/edit?usp=sharing) for a more detailed introduction of NDN.
+Neural Design Network (NDN) [4] can generate a graphic design layout given a set of components with user-specified attributes and constraints. It first takes as input a graph with partial edges from user input, completes this graph by filling in unknown edges, and infers these unknown edges to build a graph with complete relationships among components. Next, NDN iteratively predicts bounding boxes for components in the complete graph and fine-tunes the bounding boxes to improve the alignment and visual quality. Please refer to [this slides](https://docs.google.com/presentation/d/19PiiWzMIE8OV7eqCfFcSfx_mYo6PAQST-qNrfOhUb6k/edit?usp=sharing) for a more detailed introduction of NDN.
 
-![NDN](/assets/images/blogs/220828-gcn/ndn.png)
+<!-- ![NDN](/assets/images/blogs/220828-gcn/ndn.png) -->
+<div align=center>
+<img src="/assets/images/blogs/220828-gcn/ndn.png" width="60%" />
+</div>
 
 <!-- ----------------- -->
 
@@ -86,10 +107,10 @@ Neural Design Network (NDN) [[4]](#ref4) can generate a graphic design layout gi
 [2] [Introduction to Graphs and Label Propagation Algorithm in Machine Learning](https://www.youtube.com/watch?v=OI0Jo-5d190&list=PLSgGvve8UweGx4_6hhrF3n4wpHf_RV76_)
 
 
-<div id="ref3"></div>
+<!-- <div id="ref3"></div> -->
 
 [3] [Graph2Plan: Learning Floorplan Generation from Layout Graphs paper](http://vcc.szu.edu.cn/file/upload_file//image/research/att202005131359/Graph2Plan.pdf), [code](https://github.com/HanHan55/Graph2plan)
 
-<div id="ref4"></div>
+<!-- <div id="ref4"></div> -->
 
 [4] [Neural Design Network: Graphic Layout Generation with Constraints](https://arxiv.org/abs/1912.09421)
